--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-﻿/obj/Debug/net5.0/Bubelinez.assets.cache
-/obj/project.nuget.cache
-/obj/Debug/net5.0/Bubelinez.csproj.AssemblyReference.cache
+﻿/obj
+/bin
+.idea
